[tool.poetry]
name = "data_structures_practice"
version = "0.1.0"
description = ""
authors = ["NyxofDarkness <ibelieve.as@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
